// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`logging should logging an error in "watch" method: error 1`] = `"Error: Watch error"`;

exports[`logging should logging an warning: stderr 1`] = `""`;

exports[`logging should logging an warning: stdout 1`] = `
"WARNING in Warning

webpack compiled with 1 warning"
`;

exports[`logging should logging on successfully build and respect the "stats" option from configuration with custom object value: stderr 1`] = `""`;

exports[`logging should logging on successfully build and respect the "stats" option from configuration with custom object value: stdout 1`] = `"Entrypoint main 5.7 KiB (4.68 KiB) = bundle.js 2 auxiliary assets"`;

exports[`logging should logging on successfully build and respect the "stats" option from configuration with the "false" value: stderr 1`] = `""`;

exports[`logging should logging on successfully build and respect the "stats" option from configuration with the "false" value: stdout 1`] = `""`;

exports[`logging should logging on successfully build and respect the "stats" option from configuration with the "minimal" value: stderr 1`] = `""`;

exports[`logging should logging on successfully build and respect the "stats" option from configuration with the "minimal" value: stdout 1`] = `
"3 assets
8 modules
webpack 5.11.1 compiled successfully in 69 ms"
`;

exports[`logging should logging on successfully build and respect the "stats" option from configuration with the "none" value: stderr 1`] = `""`;

exports[`logging should logging on successfully build and respect the "stats" option from configuration with the "none" value: stdout 1`] = `""`;

exports[`logging should logging on successfully build and respect the "stats" option from configuration with the "true" value: stderr 1`] = `""`;

exports[`logging should logging on successfully build and respect the "stats" option from configuration with the "true" value: stdout 1`] = `
"asset bundle.js 5.7 KiB [emitted] (name: main)
asset svg.svg 4.67 KiB [emitted] [from: svg.svg] (auxiliary name: main)
asset index.html 10 bytes [emitted] [from: index.html] (auxiliary name: main)
runtime modules 1.71 KiB 5 modules
cacheable modules 223 bytes
  ./foo.js 118 bytes [built] [code generated]
  ./svg.svg 51 bytes [built] [code generated]
  ./index.html 54 bytes [built] [code generated]
webpack 5.11.1 compiled successfully in 69 ms"
`;

exports[`logging should logging on successfully build in multi-compiler mode: stderr 1`] = `""`;

exports[`logging should logging on successfully build in multi-compiler mode: stdout 1`] = `
"asset svg.svg 4.67 KiB [emitted] [from: svg.svg] (auxiliary name: main)
asset bundle.js 4.34 KiB [emitted] (name: main)
asset index.html 10 bytes [emitted] [from: index.html] (auxiliary name: main)
runtime modules 707 bytes 4 modules
cacheable modules 223 bytes
  ./foo.js 118 bytes [built] [code generated]
  ./svg.svg 51 bytes [built] [code generated]
  ./index.html 54 bytes [built] [code generated]
webpack 5.11.1 compiled successfully in 92 ms

asset bundle.js 816 bytes [emitted] (name: main)
./bar.js 69 bytes [built] [code generated]
webpack 5.11.1 compiled successfully in 53 ms"
`;

exports[`logging should logging on successfully build: stderr 1`] = `""`;

exports[`logging should logging on successfully build: stdout 1`] = `
"asset bundle.js 5.7 KiB [emitted] (name: main)
asset svg.svg 4.67 KiB [emitted] [from: svg.svg] (auxiliary name: main)
asset index.html 10 bytes [emitted] [from: index.html] (auxiliary name: main)
runtime modules 1.71 KiB 5 modules
cacheable modules 223 bytes
  ./foo.js 118 bytes [built] [code generated]
  ./svg.svg 51 bytes [built] [code generated]
  ./index.html 54 bytes [built] [code generated]
webpack 5.11.1 compiled successfully in 71 ms"
`;

exports[`logging should logging on unsuccessful build in multi-compiler: stderr 1`] = `""`;

exports[`logging should logging on unsuccessful build in multi-compiler: stdout 1`] = `
"ERROR in ./broken.js 1:3
Module parse failed: Unexpected token (1:3)
You may need an appropriate loader to handle this file type, currently no loaders are configured to process this file. See https://webpack.js.org/concepts#loaders
> 1()2()3()
|

webpack compiled with 1 error

ERROR in ./broken.js 1:3
Module parse failed: Unexpected token (1:3)
You may need an appropriate loader to handle this file type, currently no loaders are configured to process this file. See https://webpack.js.org/concepts#loaders
> 1()2()3()
|

webpack compiled with 1 error"
`;

exports[`logging should logging on unsuccessful build: stderr 1`] = `""`;

exports[`logging should logging on unsuccessful build: stdout 1`] = `
"ERROR in ./broken.js 1:3
Module parse failed: Unexpected token (1:3)
You may need an appropriate loader to handle this file type, currently no loaders are configured to process this file. See https://webpack.js.org/concepts#loaders
> 1()2()3()
|

webpack compiled with 1 error"
`;

exports[`logging should logging warnings in multi-compiler mode: stderr 1`] = `""`;

exports[`logging should logging warnings in multi-compiler mode: stdout 1`] = `
"WARNING in Warning

webpack compiled with 1 warning

WARNING in Warning

webpack compiled with 1 warning"
`;
